Make sure text stays centred on small screens on 404 page

--- a/src/pages/notFoundPage/notFoundPage.module.css
+++ b/src/pages/notFoundPage/notFoundPage.module.css
@@ -14,6 +14,7 @@
   font-family: 'Cinzel Decorative', Arial, Helvetica, sans-serif;
   color: #fff;
   margin: 0 auto 16px;
+  text-align: center;
 }
 
 .link {
